.happypack/s-1212780172
SyntaxError: 'import' and 'export' may only appear at the top level (83:2)

[0m [90m 81 | [39m[32m  `[39m
 [90m 82 | [39m
[31m[1m>[22m[39m[90m 83 | [39m  [36mimport[39m {green100[33m,[39m green500[33m,[39m green700} from [32m'material-ui/styles/colors'[39m[33m;[39m
 [90m    | [39m  [31m[1m^[22m[39m
 [90m 84 | [39m
 [90m 85 | [39m  [36mconst[39m muiTheme [33m=[39m getMuiTheme({
 [90m 86 | [39m    palette[33m:[39m {[0m

BabelLoaderError: SyntaxError: 'import' and 'export' may only appear at the top level (83:2)

[0m [90m 81 | [39m[32m  `[39m
 [90m 82 | [39m
[31m[1m>[22m[39m[90m 83 | [39m  [36mimport[39m {green100[33m,[39m green500[33m,[39m green700} from [32m'material-ui/styles/colors'[39m[33m;[39m
 [90m    | [39m  [31m[1m^[22m[39m
 [90m 84 | [39m
 [90m 85 | [39m  [36mconst[39m muiTheme [33m=[39m getMuiTheme({
 [90m 86 | [39m    palette[33m:[39m {[0m

    at transpile (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/babel-loader/lib/index.js:61:13)
    at Object.module.exports (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/babel-loader/lib/index.js:163:20)
    at applySyncOrAsync (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/applyLoaders.js:341:21)
    at apply (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/applyLoaders.js:268:5)
    at /home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/applyLoaders.js:131:7
    at applyPitchLoader (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/applyLoaders.js:184:14)
    at applyPitchLoader (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/applyLoaders.js:192:14)
    at applyPitchLoaders (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/applyLoaders.js:222:4)
    at applyLoaders (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/applyLoaders.js:116:3)
    at HappyWorker.compile (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/HappyWorker.js:32:3)